# edit0r

./: Cargo.toml
src/: main.rs  mode.rs  text_mode.rs
